--- a/vars/rancher_cluster.yml
+++ b/vars/rancher_cluster.yml
@@ -7,5 +7,6 @@ outscale_region: us-east-2
 k8s_cluster_namespace: cloud-infrastructure
 k8s_cluster_hostname: cloudinfra
 aws_profile: outscale
+route53_profile: red #this profile should point to the aws-red account
 rancher_node_count: 3
 security_ingress: rancher-general-ingress.json
