--- a/rancher-init.yml
+++ b/rancher-init.yml
@@ -268,6 +268,9 @@
 
       - name: Create namespace
         shell: /snap/bin/kubectl create namespace {{ k8s_cluster_namespace }}
+        ignore_errors: yes 
+        retries: 5
+        delay: 60
         environment:
           KUBECONFIG: /home/outscale/kube_config_cluster.yml
 
@@ -410,7 +413,7 @@
       #         --instances {{ item }} \
       #         --endpoint https://lbu.us-east-2.outscale.com/
       #  loop: "{{ rancher_instances.msg }}" 
-      
+
       - name: Waiting for port 80
         wait_for:
           host: "{{ rancher_public_ips.stdout_lines[0] }}"
